<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_change_password"
            android:textColor="@color/fontPrimary"
            android:textSize="@dimen/title_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtOldPassword"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:fontFamily="sans"
                android:hint="@string/edt_old_password"
                android:inputType="textPassword"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:fontFamily="sans"
                android:hint="@string/edt_new_password"
                android:inputType="textPassword"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:fontFamily="sans"
                android:hint="@string/edt_confirm_password"
                android:inputType="textPassword"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/btnChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_yellow"
                android:textColor="@color/fontPointReward"
                android:text="@string/btn_change_password"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>