<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_logo_height"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/term_logo_width"
            android:layout_height="@dimen/term_logo"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:visibility="invisible"
                android:textColor="@color/fontYellow"
                android:text="@string/txt_no_internet_connection"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_email"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans"
                    android:hint="@string/edt_email"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="35dp"
                    android:textSize="16dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_password"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="sans"
                    android:hint="@string/edt_password"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:inputType="textPassword"
                    android:paddingLeft="35dp"
                    android:textSize="16dp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_yellow"
                android:textColor="@color/fontPointReward"
                android:layout_marginTop="18dp"
                android:text="@string/btn_login"/>

            <CheckBox
                android:id="@+id/chkRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_remember_me"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_register"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_forgot_password"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>