<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <EditText
            android:id="@+id/edtNamaDepan"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:fontFamily="sans"
            android:hint="@string/edt_nama_depan"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/edtNamaBelakang"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:layout_marginLeft="2dp"
            android:background="@color/white"
            android:fontFamily="sans"
            android:hint="@string/edt_nama_belakang"
            android:textSize="16dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edtJabatan"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:fontFamily="sans"
            android:hint="@string/edt_jabatan"
            android:textSize="16dp"/>

        <RelativeLayout
            android:id="@+id/btnJabatan"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@color/btnGreen"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/txtJabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_toLeftOf="@+id/imgJabatan"
                android:singleLine="false"
                android:text="@string/edt_jabatan"/>

            <ImageView
                android:id="@+id/imgJabatan"
                android:layout_width="@dimen/item_arrow_size"
                android:layout_height="@dimen/item_arrow_size"
                android:background="@drawable/arrow_down"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_confirm_password"
        android:inputType="textPassword"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtNomorTelpon1"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_nomor_telpon_1"
        android:inputType="phone"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtNomorTelpon2"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_nomor_telpon_2"
        android:inputType="phone"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtAlamatRumah"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_alamat_rumah"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/edtAlamatApotik"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_alamat_apotik"
        android:textSize="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edtKota"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:fontFamily="sans"
            android:hint="@string/edt_kota"
            android:textSize="16dp"/>

        <RelativeLayout
            android:id="@+id/btnCity"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@color/btnGreen"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/txtKota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_toLeftOf="@+id/imgKota"
                android:singleLine="false"
                android:text="@string/edt_kota"/>

            <ImageView
                android:id="@+id/imgKota"
                android:layout_width="@dimen/item_arrow_size"
                android:layout_height="@dimen/item_arrow_size"
                android:background="@drawable/arrow_down"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edtCabang"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="false"
            android:gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:fontFamily="sans"
            android:hint="@string/edt_cabang"
            android:textSize="16dp"/>

        <RelativeLayout
            android:id="@+id/btnBranch"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@color/btnGreen"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/txtCabang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_toLeftOf="@+id/imgCabang"
                android:text="@string/edt_cabang"
                android:singleLine="false"/>

            <ImageView
                android:id="@+id/imgCabang"
                android:layout_width="@dimen/item_arrow_size"
                android:layout_height="@dimen/item_arrow_size"
                android:background="@drawable/arrow_down"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/edtGrupApotik"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:fontFamily="sans"
        android:hint="@string/edt_grup_apotik"
        android:visibility="gone"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/edtNamaApotik"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:fontFamily="sans"
                android:hint="@string/edt_nama_apotik"
                android:textSize="16dp"
                android:singleLine="false"/>

            <RelativeLayout
                android:id="@+id/btnNamaApotik"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:background="@color/btnGreen"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp">

                <TextView
                    android:id="@+id/txtNamaApotik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_toLeftOf="@+id/imgNamaApotik"
                    android:text="@string/edt_nama_apotik"
                    android:singleLine="false"/>

                <ImageView
                    android:id="@+id/imgNamaApotik"
                    android:layout_width="@dimen/item_arrow_size"
                    android:layout_height="@dimen/item_arrow_size"
                    android:background="@drawable/arrow_down"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>
            </RelativeLayout>
        </RelativeLayout>

        <EditText
            android:id="@+id/edtOther"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:fontFamily="sans"
            android:hint="@string/edt_other"
            android:visibility="gone"
            android:textSize="16dp"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>