<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_logo_height"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/term_logo_width"
            android:layout_height="@dimen/term_logo"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/white">

        <WebView
            android:id="@+id/wvTermText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_marginBottom="10dp"
            android:cacheColorHint="#00000000"
            android:layout_above="@+id/contentTermButton">
        </WebView>

        <LinearLayout
            android:id="@+id/contentTermButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <CheckBox
                android:id="@+id/chkTncAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_tnc"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAgree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:enabled="false"
                    android:text="@string/btn_aggree"/>

                <Button
                    android:id="@+id/btnDisagree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="@string/btn_disagree"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>